# Connect4

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: ai.py  app.py  main.py  ui.py
src/tests/: ai_test.py  connect4_test.py
