[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["Ellu <alikoskieveliina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
